# miden-node

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .taplo.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  build.rs  clippy.toml  docker-compose.yml  faucet.fsk  genesis.toml  index.html  log.txt  miden-client.toml  miden-faucet.toml  miden-node.toml  miden.toml  mkdocs.yml  print.html  response.json  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  test.txt  toc.html  toc.js  wallet.fsk
block-producer/: Cargo.toml  Dockerfile  README.md  block-producer-example.toml  miden-block-producer.toml
block-producer/src/: block.rs  config.rs  constants.rs  errors.rs  lib.rs  main.rs
block-producer/src/batch_builder/: batch.rs  errors.rs  mod.rs
block-producer/src/batch_builder/tests/: mod.rs
block-producer/src/block_builder/: account.rs  errors.rs  kernel.rs  mod.rs  prover.rs  tests.rs  vm.rs
block-producer/src/block_builder/prover/: block_witness.rs  mod.rs  tests.rs
block-producer/src/cli/: cli.rs  mod.rs
block-producer/src/msg/: mod.rs
block-producer/src/rpc/: local.rs  mod.rs
block-producer/src/server/: api.rs  mod.rs
block-producer/src/state_view/: mod.rs
block-producer/src/state_view/tests/: apply_block.rs  mod.rs  verify_tx.rs
block-producer/src/store/: errors.rs  mod.rs
block-producer/src/tasks/: mod.rs
block-producer/src/tasks/batch_builder/: mod.rs
block-producer/src/tasks/txqueue/: mod.rs
block-producer/src/tasks/txqueuerpc/: mod.rs
block-producer/src/test_utils/: account.rs  batch.rs  block.rs  mod.rs  proven_tx.rs  store.rs
block-producer/src/txqueue/: mod.rs
block-producer/src/txqueue/tests/: mod.rs
crates/block-producer/: Cargo.toml  README.md
crates/block-producer/src/: block.rs  config.rs  errors.rs  lib.rs  server.rs  transaction.rs
crates/block-producer/src/batch_builder/: batch.rs  mod.rs
crates/block-producer/src/block_builder/: mod.rs  tests.rs
crates/block-producer/src/domain/: transaction.rs
crates/block-producer/src/mempool/: account_state.rs  batch_graph.rs  dependency_graph.rs  inflight_state.rs  mod.rs  tests.rs  transaction_expiration.rs  transaction_graph.rs  transaction_pool.rs
crates/block-producer/src/pool/: mod.rs
crates/block-producer/src/server/: api.rs  mod.rs
crates/block-producer/src/state_view/: account_state.rs  mod.rs
crates/faucet/: Cargo.toml  miden-faucet.toml
crates/faucet/src/: config.rs  errors.rs  handlers.rs  lib.rs  server.rs  utils.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/proto/: account.proto  block_header.proto  merkle.proto  note.proto  requests.proto  responses.proto  rpc.proto  store.proto  transaction.proto
crates/proto/src/: errors.rs  lib.rs
crates/proto_build/: Cargo.toml
crates/proto_build/src/: lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc-proto/: Cargo.toml  README.md  build.rs
crates/rpc-proto/proto/: account.proto  block.proto  block_header.proto  block_producer.proto  digest.proto  merkle.proto  mmr.proto  note.proto  requests.proto  responses.proto  rpc.proto  store.proto  transaction.proto
crates/rpc-proto/src/: lib.rs  proto_files.rs
crates/rpc/src/: config.rs  lib.rs
crates/store/: Cargo.toml  README.md
crates/store/src/: account_tree.rs  blocks.rs  config.rs  errors.rs  genesis.rs  lib.rs  nullifier_tree.rs  state.rs  types.rs
crates/test-macro/: Cargo.toml
crates/test-macro/src/: lib.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: config.rs  crypto.rs  errors.rs  formatting.rs  grpc.rs  lib.rs  logging.rs  testing.rs
faucet/: Cargo.toml  miden-faucet.toml
faucet/src/: cli.rs  config.rs  errors.rs  handlers.rs  main.rs  utils.rs
faucet/src/static/: index.css  index.html  index.js
node/: Cargo.toml  Dockerfile  genesis-example.toml  genesis.toml  miden-node-example.toml  miden-node.toml  node.toml
node/src/: commands.rs  config.rs  genesis.rs  main.rs  start.rs
node/src/commands/: genesis.rs  mod.rs  start.rs
node/src/faucet/: mod.rs  utils.rs
proto/: Cargo.toml  README.md  account.proto  block.proto  block_producer.proto  build.rs  hash.proto  merkle.proto  mmr.proto  network_transaction.proto  network_transaction_builder.proto  note.proto  readme.md  requests.proto  responses.proto  rpc.proto  smt.proto  store.proto  transaction.proto  trees.proto
proto/proto/: account.proto  account_id.proto  block.proto  block_header.proto  control_plane.proto  mmr.proto  note.proto  ntx_builder.proto  requests.proto  responses.proto  rpc.proto  smt.proto  store.proto  transaction.proto  tsmt.proto
proto/src/: conversion.rs  digest.rs  error.rs  errors.rs  formatting.rs  hex.rs  lib.rs
proto/src/domain/: account_block_input_record.rs  account_id.rs  account_input_record.rs  account_update.rs  accounts.rs  block_header.rs  block_inputs.rs  blocks.rs  digest.rs  merkle.rs  merkle_path.rs  mmr_delta.rs  mod.rs  note.rs  note_created.rs  notes.rs  nullifier_input_record.rs  nullifier_leaf.rs  nullifier_proof.rs  nullifiers.rs  transactions.rs
rpc/: Cargo.toml  Dockerfile  README.md  miden-rpc.toml  rpc-example.toml
rpc/src/: config.rs  constants.rs  lib.rs  main.rs
rpc/src/cli/: cli.rs  mod.rs
rpc/src/server/: api.rs  mod.rs
store/: Cargo.toml  Dockerfile  README.md  miden-store.toml  store-example.toml
store/src/: config.rs  constants.rs  db.rs  errors.rs  genesis.rs  lib.rs  main.rs  migrations.rs  nullifier_tree.rs  state.rs  types.rs
store/src/cli/: cli.rs  mod.rs
store/src/db/: errors.rs  migrations.rs  mod.rs  settings.rs  sql.rs  tests.rs
store/src/server/: api.rs  mod.rs
test-macro/: Cargo.toml
test-macro/src/: lib.rs
txpool/: Cargo.toml
txpool/src/: lib.rs
txpool/src/tasks/: mod.rs
txpool/src/test_utils/: mod.rs
utilities/genesis/: Cargo.toml
utilities/genesis/src/: main.rs  state.rs
utils/: Cargo.toml
utils-macro/: Cargo.toml
utils-macro/src/: lib.rs
utils/src/: config.rs  control_plane.rs  formatting.rs  genesis.rs  lib.rs  logging.rs
(+193 files in other folders)
