[workspace]
members = [
  "bin/node",
  "bin/faucet",
  "bin/stress-test",
  "crates/block-producer",
  "crates/proto",
  "crates/rpc-proto",
  "crates/rpc",
  "crates/store",
  "crates/utils",
  "crates/test-macro",
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
version = "0.6.0"
license = "MIT"
authors = ["Miden contributors"]
homepage = "https://polygon.technology/polygon-miden"
repository = "https://github.com/0xPolygonMiden/miden-node"
exclude = [".github/"]
readme = "README.md"

[workspace.dependencies]
assert_matches = { version = "1.5" }
miden-air = { version = "0.11" }
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next" }
miden-node-block-producer = { path = "crates/block-producer", version = "0.6" }
miden-node-proto = { path = "crates/proto", version = "0.6" }
miden-node-rpc = { path = "crates/rpc", version = "0.6" }
miden-node-store = { path = "crates/store", version = "0.6" }
miden-node-test-macro = { path = "crates/test-macro" }
miden-node-utils = { path = "crates/utils", version = "0.6" }
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next" }
miden-processor = { version = "0.11" }
miden-stdlib = { version = "0.11", default-features = false }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next" }
prost = { version = "0.13" }
rand = { version = "0.8" }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tonic = { version = "0.12" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt",  "json",  "env-filter"] }
