[workspace]
members = [
  "bin/faucet",
  "bin/node",
  "bin/stress-test",
  "crates/block-producer",
  "crates/proto",
  "crates/rpc",
  "crates/store",
  "crates/test-macro",
  "crates/utils",
  "proto",
]

resolver = "2"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://polygon.technology/polygon-miden"
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/0xPolygonMiden/miden-node"
rust-version = "1.85"
version      = "0.9.0"

# Optimise the cryptography for faster tests involving account creation.
[profile.test.package.miden-crypto]
opt-level = 2

[workspace.dependencies]
anyhow                    = { version = "1.0" }
assert_matches            = { version = "1.5" }
http                      = { version = "1.3" }
itertools                 = { version = "0.14" }
miden-air                 = { version = "0.13" }
miden-lib                 = { version = "0.8" }
miden-node-block-producer = { path = "crates/block-producer", version = "0.9" }
miden-node-proto          = { path = "crates/proto", version = "0.9" }
miden-node-proto-build    = { path = "proto", version = "0.9" }
miden-node-rpc            = { path = "crates/rpc", version = "0.9" }
miden-node-store          = { path = "crates/store", version = "0.9" }
miden-node-test-macro     = { path = "crates/test-macro" }
miden-node-utils          = { path = "crates/utils", version = "0.9" }
miden-objects             = { version = "0.8" }
miden-processor           = { version = "0.13" }
miden-tx                  = { version = "0.8" }
prost                     = { version = "0.13" }
rand                      = { version = "0.9" }
thiserror                 = { version = "2.0", default-features = false }
tokio                     = { version = "1.40", features = ["rt-multi-thread"] }
tokio-stream              = { version = "0.1" }
tonic                     = { version = "0.12" }
tower                     = { version = "0.5" }
tower-http                = { version = "0.6", features = ["trace"] }
tracing                   = { version = "0.1" }
tracing-subscriber        = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url                       = { version = "2.5", features = ["serde"] }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation    = "allow" # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
large_types_passed_by_value = "allow" # Triggered by BlockHeader being Copy + 334 bytes.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
