[package]
name = "miden-node-block-producer"
version = "0.1.0"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-node"
keywords = ["miden", "node", "program", "store"]
edition = "2021"
rust-version = "1.73"

[[bin]]
name = "miden-node-block-producer"
path = "src/main.rs"
bench = false
doctest = false

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
clap = { version = "4.3", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
itertools = { version = "0.12" }
miden-air = { package = "miden-air", git = "https://github.com/0xPolygonMiden/miden-vm", branch = "plafer-tsmt-replacement", default-features = false }
miden-crypto = { workspace = true }
miden-node-proto = { path = "../proto" }
miden-node-store = { path = "../store" }
miden-node-utils = { path = "../utils" }
miden_objects = { workspace = true }
miden_stdlib = { package = "miden-stdlib", git = "https://github.com/0xPolygonMiden/miden-vm", branch = "plafer-tsmt-replacement", default-features = false }
miden_vm = { package = "miden-vm", git = "https://github.com/0xPolygonMiden/miden-vm", branch = "plafer-tsmt-replacement", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
tokio = { version = "1.29", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "sync",
    "time",
] }
toml = { version = "0.8" }
tonic = { version = "0.10" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
miden-mock = { package = "miden-mock", git = "https://github.com/0xPolygonMiden/miden-base", branch = "plafer-fix-new-smt-masm", default-features = false }
once_cell = { version = "1.18" }
tokio = { version = "1.29", features = ["test-util" ] }
winterfell = { version = "0.7" }
