[package]
name = "miden-node-block-producer"
version = "0.1.0"
description = "Miden node's block producer component"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-node"
keywords = ["miden", "node", "program", "store"]
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "miden-node-block-producer"
path = "src/main.rs"
bench = false
doctest = false

[features]
tracing-forest = ["miden-node-utils/tracing-forest"]

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
clap = { version = "4.3", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
itertools = { version = "0.12" }
miden-air = { workspace = true }
miden-node-proto = { path = "../proto", version = "0.1" }
miden-node-store = { path = "../store", version = "0.1" }
miden-node-utils = { path = "../utils", version = "0.1" }
miden-objects = { workspace = true }
miden-processor = { workspace = true }
miden-stdlib = { workspace = true }
miden-tx = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
toml = { version = "0.8" }
tonic = { version = "0.11" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
miden-node-test-macro = { path = "../test-macro" }
miden-objects = { workspace = true, features = ["testing"] }
once_cell = { version = "1.18" }
tokio = { version = "1.29", features = ["test-util"] }
winterfell = { version = "0.8" }
