[package]
name = "miden-node-faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
actix-cors = "0.7.0"
derive_more = "0.99.17"
figment = { version = "0.10", features = ["toml", "env", "test"] }
miden-lib = { workspace = true }
miden-client = { git = "https://github.com/0xPolygonMiden/miden-client", branch = "main", features = ["testing", "concurrent"] }
miden-node-proto = { path = "../proto" }
miden-objects = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
async-mutex = "1.4.0"
env_logger = "0.11.2"
