[package]
name = "miden-node-faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Makes `make-genesis` subcommand run faster. Is only suitable for testing.
testing = ["miden-client/testing"]

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
actix-cors = "0.7.0"
derive_more = "0.99.17"
figment = { version = "0.10", features = ["toml", "env"] }
miden-lib = { version = "0.1" } # Need to set older version because client doesn't support newest miden-objects yet
miden-client = { version = "0.1.0", features = ["concurrent"] }
miden-node-proto = { path = "../proto", version = "0.2" }
miden-node-utils = { path = "../utils", version = "0.2" }
miden-objects = { version = "0.1" } # Need to set older version because client doesn't support newest miden-objects yet
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
async-mutex = "1.4.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
