[package]
name = "miden-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords = ["miden", "node"]
description = "Miden node binary"

[features]
# Makes `make-genesis` subcommand run faster. Is only suitable for testing.
testing = ["miden-lib/testing"]
tracing-forest = ["miden-node-block-producer/tracing-forest"]

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.3", features = ["derive"] }
miden-lib = { workspace = true, features = ["concurrent"] }
miden-node-block-producer = { path = "../block-producer" }
miden-node-rpc = { path = "../rpc" }
miden-node-store = { path = "../store" }
miden-node-utils = { path = "../utils" }
miden-objects = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
miden-node-utils = { path = "../utils", features = ["tracing-forest"] }
