[package]
name = "miden-node"
version = "0.2.0"
description = "Miden node binary"
readme = "README.md"
keywords = ["miden", "node"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
# Makes `make-genesis` subcommand run faster. Is only suitable for testing.
testing = ["miden-lib/testing"]
tracing-forest = ["miden-node-block-producer/tracing-forest"]

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.3", features = ["derive"] }
miden-lib = { workspace = true, features = ["concurrent"] }
miden-node-block-producer = { path = "../block-producer", version = "0.2" }
miden-node-rpc = { path = "../rpc", version = "0.2" }
miden-node-store = { path = "../store", version = "0.2" }
miden-node-utils = { path = "../utils", version = "0.2" }
miden-objects = { workspace = true }
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
miden-node-utils = { path = "../utils", version = "0.2", features = ["tracing-forest"] }
