[package]
name = "miden-node-proto"
version = "0.1.0"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-node"
keywords = ["miden", "node", "program", "proto"]
edition = "2021"
rust-version = "1.73"

[dependencies]
hex = { version = "0.4" }
miden-node-utils = { path = "../utils" }
miden-objects = { workspace = true }
prost = { version = "0.12" }
thiserror = { workspace = true }
tonic = { version = "0.11" }

[dev-dependencies]
proptest = { version = "1.2" }

[build-dependencies]
miette = { version = "7.0", features = ["fancy"] }
prost = { version = "0.12" }
prost-build = { version = "0.12" }
protox = { version = "0.6" }
tonic-build = { version = "0.11" }
