[package]
name = "miden-node-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords = ["miden", "node", "rpc"]
description = "Miden node's front-end RPC server"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.3", features = ["derive"] }
directories = { version = "5.0" }
figment = { version = "0.10", features = ["toml", "env"] }
hex = { version = "0.4" }
miden-node-block-producer = { path = "../block-producer", version = "0.2" }
miden-node-proto = { path = "../proto", version = "0.2" }
miden-node-store = { path = "../store", version = "0.2" }
miden-node-utils = { path = "../utils", version = "0.2" }
miden-objects = { workspace = true }
miden-tx = { workspace = true }
prost = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros"] }
toml = { version = "0.8" }
tonic = { version = "0.11" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
miden-node-utils = { path = "../utils", version = "0.2", features = ["tracing-forest"] }
