[package]
name = "miden-node-test-macro"
version = "0.1.0"
description = "Miden's test macro"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-node"
keywords = ["miden", "node", "utils", "macro"]

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0" , features = ["full", "extra-traits"]}

[lib]
proc-macro = true
