[package]
name = "miden-node-test-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords = ["miden", "node", "utils", "macro"]
description = "Miden node's test macro"

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0" , features = ["full", "extra-traits"]}

[lib]
proc-macro = true
