[package]
name = "miden-node-test-macro"
version = "0.1.0"
description = "Miden node's test macro"
readme = "README.md"
keywords = ["miden", "node", "utils", "macro"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0" , features = ["full", "extra-traits"]}

[lib]
proc-macro = true
