[package]
name = "miden-node-utils-macro"
version = "0.1.0"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-node"
keywords = ["miden", "node", "utils", "macro"]
edition = "2021"
rust-version = "1.73"

[features]
testing = []

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0" , features = ["full", "extra-traits"]}

[lib]
proc-macro = true
