[package]
name = "miden-node-utils"
version = "0.1.0"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-node"
keywords = ["miden", "node", "utils"]
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = { version = "1.0" }
figment = { version = "0.10", features = ["toml", "env"] }
itertools = { version = "0.12" }
miden-crypto = { workspace = true }
miden-objects = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { version = "0.1", optional = true, features = ["chrono"] }
