[package]
name = "miden-node-utils"
version = "0.2.0"
description = "Miden node's shared utilities"
keywords = ["miden", "node", "utils"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { version = "1.0" }
figment = { version = "0.10", features = ["toml", "env"] }
itertools = { version = "0.12" }
miden-objects = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
tracing-forest = { version = "0.1", optional = true, features = ["chrono"] }
tracing-subscriber = { workspace = true }
