[package]
authors.workspace      = true
description            = "Miden node's block producer component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["block-producer", "miden", "node"]
license.workspace      = true
name                   = "miden-node-block-producer"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
testing        = ["dep:miden-air", "dep:miden-node-test-macro", "dep:rand_chacha", "dep:winterfell"]
tracing-forest = ["miden-node-utils/tracing-forest"]

[dependencies]
async-trait = { version = "0.1" }
futures = { version = "0.3" }
itertools = { workspace = true }
miden-air = { workspace = true, optional = true }
miden-block-prover = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next" }
miden-lib = { workspace = true }
miden-node-proto = { workspace = true }
miden-node-utils = { workspace = true }
miden-node-test-macro = { path = "../test-macro", optional = true }
miden-objects = { workspace = true }
miden-processor = { workspace = true }
miden-proving-service-client = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", features = [
  "batch-prover",
  "block-prover",
] }
miden-tx = { workspace = true }
miden-tx-batch-prover = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["transport"] }
tower-http = { workspace = true, features = ["util"] }
tracing = { workspace = true }
winterfell = { version = "0.11", optional = true}
url = { workspace = true }

[dev-dependencies]
assert_matches        = { workspace = true }
miden-lib             = { workspace = true, features = ["testing"] }
miden-node-test-macro = { path = "../test-macro" }
miden-objects         = { workspace = true, features = ["testing"] }
miden-tx              = { workspace = true, features = ["testing"] }
pretty_assertions     = "1.4"
tokio                 = { workspace = true, features = ["test-util"] }
